--- a/client/src/pages/AuthPage/authPage.scss
+++ b/client/src/pages/AuthPage/authPage.scss
@@ -10,7 +10,7 @@
     }
 
     &__modal {
-        box-shadow: 0px 0px 20px rgba($color: #000000, $alpha: 0.3);
+        box-shadow: 0 0 20px rgba($color: #000000, $alpha: 0.3);
         width: 700px;
         border-radius: 10px;
         padding: 20px 0;
@@ -35,4 +35,9 @@
         column-gap: 20px;
         justify-content: center;
     }
+}
+
+.error {
+    color: #ff0000;
+    text-align: center;
 }
