--- a/client/src/components/Table/table.scss
+++ b/client/src/components/Table/table.scss
@@ -41,6 +41,22 @@
         &_center {
             justify-content: center;
         }
+
+        &.option {
+            display: flex;
+            justify-content: center;
+        }
+
+        .more-option {
+            transform: rotate(90deg);
+            width: 20px;
+            padding: 4px;
+
+            &:hover {
+                background-color: rgba(155, 155, 155, 0.2);
+                border-radius: 5px;
+            }
+        }
     }
 
     &__pagination {
