--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -9,6 +9,7 @@
         align-items: center;
         column-gap: 5px;
         width: 60%;
+        position: relative;
     }
 
     &__wrapper {
@@ -26,6 +27,10 @@
                 font-weight: 500;
             }
         }
+    }
+
+    &__upload {
+        height: 100%;
     }
 
     &__workspace-group {
