--- a/client/src/components/Header/UploadFile/uploadFile.scss
+++ b/client/src/components/Header/UploadFile/uploadFile.scss
@@ -29,7 +29,7 @@
         box-shadow: 0 0 45px -19px  #000;
         box-sizing: border-box;
         padding: 10px 15px;
-        display: none;
+        display: block;
 
         .preview-list {
             height: 400px;
