--- a/client/src/components/DockViewer/dockViewer.scss
+++ b/client/src/components/DockViewer/dockViewer.scss
@@ -27,15 +27,30 @@
     }
 
     #react-doc-viewer{
-        min-width: 500px;
-        min-height: 300px;
+        max-width: 80%;
+        max-height: 80%;
+        width: max-content;
     }
 
     &.viewer-img {
 
+
         #react-doc-viewer{
-            width: 60%;
-            height: 60%;
+            //width: min-content;
+        }
+
+        #image-renderer {
+            width: 100%;
+            background-image: none;
+            background-color: #ffffff;
+        }
+
+        #image-img {
+            max-width: inherit;
+            max-height: inherit;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
 
         .d-viewer__close {
