--- a/client/src/components/DockViewer/dockViewer.scss
+++ b/client/src/components/DockViewer/dockViewer.scss
@@ -26,37 +26,59 @@
         display: flex;
     }
 
-    #react-doc-viewer{
-        max-width: 80%;
-        max-height: 80%;
-        width: max-content;
-    }
+    .pg-viewer-wrapper {
+        overflow-y: initial;
+        width: 100%;
+        max-width: 60%;
 
-    &.viewer-img {
-
-
-        #react-doc-viewer{
-            //width: min-content;
-        }
-
-        #image-renderer {
-            width: 100%;
-            background-image: none;
-            background-color: #ffffff;
-        }
-
-        #image-img {
-            max-width: inherit;
-            max-height: inherit;
+        img {
             width: 100%;
             height: 100%;
-            object-fit: contain;
-        }
-
-        .d-viewer__close {
-            top: 20%;
-            right: 21%;
-            font-size: 40px;
         }
     }
+
+    .photo-viewer-container {
+        width: 500px;
+        height: 500px;
+    }
+
+    .video-container {
+
+        video {
+            width: 100%;
+        }
+    }
+    //#react-doc-viewer{
+    //    max-width: 80%;
+    //    max-height: 80%;
+    //    width: max-content;
+    //}
+    //
+    //&.viewer-img {
+    //
+    //
+    //    #react-doc-viewer{
+    //        //width: min-content;
+    //    }
+    //
+    //    #image-renderer {
+    //        width: 100%;
+    //        background-image: none;
+    //        background-color: #ffffff;
+    //    }
+    //
+    //    #image-img {
+    //        max-width: inherit;
+    //        max-height: inherit;
+    //        width: 100%;
+    //        height: 100%;
+    //        object-fit: contain;
+    //    }
+    //
+    //    .d-viewer__close {
+    //        top: 20%;
+    //        right: 21%;
+    //        font-size: 40px;
+    //    }
+    //}
 }
