--- a/client/src/components/Header/UploadFile/uploadFile.scss
+++ b/client/src/components/Header/UploadFile/uploadFile.scss
@@ -30,6 +30,7 @@
         box-sizing: border-box;
         padding: 10px 15px;
         display: block;
+        z-index: 1000;
 
         .preview-list {
             height: 400px;
