--- a/client/src/components/HomeComponents/Table/table.scss
+++ b/client/src/components/HomeComponents/Table/table.scss
@@ -10,6 +10,7 @@
             background-color: rgba(0, 30, 60, 0.4);
             font-size: 1.1rem;
             color: #fff;
+            padding-right: 35px;
         }
     }
 
